--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,13 @@
+@font-face {
+	font-family: 'icomoon';
+	src:url('fonts/icomoon.eot');
+	src:url('fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('fonts/icomoon.woff') format('woff'),
+		url('fonts/icomoon.ttf') format('truetype'),
+		url('fonts/icomoon.svg#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
 a
 {
 	color: #DD4F21;
@@ -42,7 +52,14 @@ header #avatar figcaption
 	background: #22BCE0;
 	float: right;
 	height: 50px;
-	padding: 0 2px;
+	line-height: 50px;
+}
+header #avatar figcaption:after
+{
+	content: "\e002";
+	font-family: "icomoon";
+	font-size: 0.7em;
+	opacity: 0.5;
 }
 header #avatar img 
 {
@@ -79,17 +96,37 @@ nav ul li a
 nav #flechita_nav a
 {
 	background: #22BCE0;
-	padding: 0.5em 0.5em;
+	padding: 0.5em 0;
 	text-decoration: none;
+}
+nav #flechita_nav a:after
+{
+	content: "\e001";
+	font-family: "icomoon";
+	opacity: 0.6;
 }
 nav #publicar_nav
 {
+	background: #DD4F21;
 	float: right;
 	margin-right: 0;
+	padding-right: 1em;
+	position: relative;
+}
+nav #publicar_nav:after
+{
+	color: rgba(255,255,255,0.5);
+	content: "\e000";
+	font-family: "icomoon";
+	font-size: 1.8em;
+	position: absolute;
+	right: 0;
+	top: 0;
 }
 nav #publicar_nav a
 {
 	background: #DD4F21;
+	display: inline-block;
 	padding: 0.5em 1em;
 	text-decoration: none;
 }
@@ -101,17 +138,45 @@ nav #publicar_nav a
 {
 	background: white;
 	border-bottom: 3px #22BCE0 solid;
+	margin-bottom: 3em;
+	min-height: 128px;
+	position: relative;
 }
 #contenido .item p
 {
 	color: #7A7A7A;
 	font-size: 0.9em;
 }
+#contenido .item .datos_item
+{
+	text-align: right;
+}
+#contenido .item .datos_item .comentarios_item
+{
+	background: #878787;
+	border-radius: 4px;
+	color: white;
+	margin: 0 0 0 2em;
+	padding: 4px;
+	text-decoration: none;
+}
+#contenido .item .datos_item .guardar_item
+{
+	margin: 0 1em;
+	text-decoration: none;
+}
+#contenido .item .datos_item .guardar_item:after
+{
+	color: #FD5;
+	content: "\e004";
+	font-family: "icomoon";
+}
 #contenido .item .datos_item .tag_item
 {
 	background: #22BCE0;
 	border-radius: 0.5em;
 	color: white;
+	float: left;
 	padding: 0.2em 0.5em;
 	text-decoration: none;
 }
@@ -134,4 +199,36 @@ nav #publicar_nav a
 {
 	color: #444;
 	text-decoration: none;
+}
+#contenido .item .votacion
+{
+	background: white;
+	border-radius: 0 0 0.5em 0.5em;
+	margin: 3px 0 0 0;
+	padding: 0.5em 0;
+	position: absolute;
+	text-align: center;
+	top: 100%;
+	width: 96px;
+}
+#contenido .item .votacion a
+{
+	text-decoration: none;
+}
+#contenido .item .votacion .down:after,
+#contenido .item .votacion .up:after
+{
+	font-family: "icomoon";
+	font-size: 1.5em;
+	vertical-align: bottom;
+}
+#contenido .item .votacion .down:after
+{
+	color: red;
+	content: "\e002";
+}
+#contenido .item .votacion .up:after
+{
+	color: green;
+	content: "\e003";
 }
